# Djangocourse

./: .gitignore  Dockerfile  compose-diagnostics.txt  compose-up.txt  db.sqlite3  docker-compose.yml  mailgun_test.py  out_login.html  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js  weblog.txt
app/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_article_status.py  0003_alter_article_word_count.py  0004_auto_20260526_2119.py  0005_auto_20260526_2120.py  0006_article_creater.py  0007_alter_article_options_alter_article_content_and_more.py  0008_alter_userprofile_managers_alter_userprofile_email.py  0009_auto_20260622_1330.py
djangocourse1/: asgi.py  settings.py  urls.py  wsgi.py
locale/es/LC_MESSAGES/: django.po
scripts/: debug_add_email.py  locate_allauth.py
static/: input.css  output.css
templates/: base.html
templates/account/: email.html  login.html  signup.html  verification_sent.html
templates/allauth/layouts/: base.html
templates/alluth/elements/: field.html  form.html
templates/alluth/layouts/: base.html
templates/app/: article_create.html  article_delete.html  article_update.html  base_form.html  home.html
tests/pages/: auth.py
