[project]
name = "djangocourse1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "django-allauth[socialaccount] (>=65.18.0,<66.0.0)",
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "django-browser-reload (>=1.14.0,<2.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "django-anymail[mailgun] (>=15.0,<16.0)",
    "django-widget-tweaks (>=1.5.1,<2.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "whitenoise[brotli] (>=6.12.0,<7.0.0)",
]

[tool.poetry]
packages = [{include = "djangocourse1"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "django-browser-reload (>=1.21.0,<2.0.0)",
]
